<resources>
    <string name="app_name">InvoiceMaker</string>
    <string name="nazwa_firmy">Nazwa firmy</string>
    <string name="ulica_numer_budynku">Ulica, numer budynku</string>
    <string name="nip">NIP</string>
    <string name="telefon">Telefon</string>
    <string name="email">Email</string>
    <string name="miasto">Miasto</string>
    <string name="kod_pocztowy">Kod Pocztowy</string>
    <string name="nowy_klient">Nowy Klient</string>
    <string name="edytuj">Edytuj</string>
    <string name="company_name">Company Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="adding_new_line">Adding new line</string>
    <string name="invoice_number">Numer Faktury</string>
    <string name="adding_new_invoice">Adding new invoice</string>
    <string name="numer_faktury">Numer Faktury</string>
    <string name="wybierz_klienta">Dodaj Kienta</string>
    <string name="wybierz_walut">Wybierz Walutę</string>
    <string name="vat">VAT</string>
    <string name="ilo">Ilość</string>
    <string name="nazwa_us_ugi">Nazwa usługi</string>
    <string name="jednostka">Jednostka</string>
    <string name="cena">Cena</string>
    <string name="wybierz_j_zyk_fv">Wybierz język FV</string>
    <string name="wybierz_stawk_vat">Wybierz stawkę VAT</string>
    <string name="zapisz">Zapisz!</string>
    <string name="nazwa_projektu">Nazwa Projektu</string>
    <string name="spos_b_zap_aty">Sposób zapłaty</string>
    <string name="uwagaPodatek">Hiermit erlaube ich mir folgende Rechnung für Bauleistungen zu stellen.Die Umsatzsteuer für diese Leistung schuldet nach §13b UStG der Leistungsempfänger.</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="units">
        <item>m</item>
        <item>m2</item>
        <item>szt.</item>
        <item>h</item>
    </string-array>

    <string-array name="currencies">
        <item>PLN</item>
        <item>EUR</item>
    </string-array>

    <string-array name="languages">
        <item>"0"</item>
        <item>"7"</item>
        <item>"19"</item>
    </string-array>
    <string-array name="payings">
        <item>"Barzahlung"</item>
        <item>"7 Tage"</item>
        <item>"14 Tage"</item>
        <item>"21 Tage"</item>
        <item>"30 Tage"</item>
    </string-array>

</resources>